--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,8 @@
     height: 400px;
     border-radius: 25px;
     padding: 10px;
-    font-size: 25px;
+    font-size: clamp(1rem, 2vw, 4rem);
+
 }
 
 #ref_para:hover{
@@ -65,7 +66,7 @@
     height: 400px;
     border-radius: 25px;
     padding: 10px;
-    font-size: 25px;
+    font-size: clamp(1rem, 1.75vw, 4rem);
 }
 
 #text_area:hover{
